_deprecated/argo-workflows/base/resources/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httproute-argo-workflows
  namespace: argo-workflows
spec:
  parentRefs:
    - name: istio-gateway
      namespace: istio-system
      sectionName: https-argo-workflows
  hostnames:
    - workflows.svc.home.arpa
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: argo-workflows-server
          port: 2746
